	  the connection to the backend is really closed.
	- Due to many JVM's not returning a meaningful value for java.version
	  the decision for building the JDBC1.2 or JDBC2 driver is now a
	  compile time option.
	- Replaced $$(cmd...) with `cmd...` in the Makefile. This should allow
	  the driver to compile when using shells other than Bash.

Sun Aug  1 18:05:42 CEST 1999 jens@jens.de
        - added support for getTransactionIsolation and setTransactionIsolation

Sun Jun 27 12:00:00 BST 1999
	- Fixed typo in postgresql.Driver that prevented compilation
	- Implemented getTimestamp() fix submitted by Philipp Matthias Hahn
	  <pmhahn@titan.lahn.de>
	- Cleaned up some comments in Connection

Wed Jun 23 06:50:00 BST 1999
	- Fixed error in errors.properties where the arguments are 0 based not
	  1 based
	- Fixed bug in postgresql.Driver where exception is thrown, then
	  intercepted rather than being passed to the calling application.
	- Removed the file postgresql/CallableStatement, as it's not used and
	  really exists in the jdbc1 & jdbc2 sub packages only.

Wed May 19 00:20:00 BST 1999
	- Internationalisation now done. Surprising that there's 68 error
	  messages in the driver ;-)

Tue May 18 07:00:00 BST 1999
	- Set the ImageViewer application to use transactions

Tue May 18 00:00:00 BST 1999
	- Just after committing, I realised why internationalisation isn't
	  working. This is now fixed (in the Makefile).

Mon May 17 23:40:00 BST 1999
	- PG_Stream.close() now attempts to send the close connection message
	  to the backend before closing the streams
	- Added batch support in the JDBC2, supplied by Yutaka Tanida
	  <yutaka@marin.or.jp>
	- Removed the old datestyle code. Now the driver uses only ISO.
	- Removed some files in the postgresql directory still in CVS that were
	  moved since 6.4.x (DatabaseMetaData.java PreparedStatement.java
	  ResultSetMetaData.java Statement.java)
	- Internationalisation of the error messages is partially implemented,